--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,1 +1,4 @@
-image: joepol/bootcamp-image:test2
+image: joepol/bootcamp-image:test3
+tasks:
+  - name: Start algodeploy
+    command: ./algodeploy/algodeploy.py start
