--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,3 +2,6 @@ image: joepol/bootcamp-image:test3
 tasks:
   - name: Start algodeploy
     command: ./algodeploy/algodeploy.py start
+vscode:
+  extensions:
+    - ms-python.python
