--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,7 +5,7 @@ tasks:
   - name: Start indexer
     init: psql -c 'create database indexer;'
     command: |
-      algorand-indexer daemon \
+      sleep 5 && algorand-indexer daemon \
       --loglevel info \
       --postgres "host=localhost port=5432 user=gitpod dbname=indexer sslmode=disable" \
       --algod-net "localhost:4001" \
