--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,7 +4,9 @@ tasks:
     command: ~/algodeploy/algodeploy.py start
   - name: Indexer
     init: | 
-      psql -c 'create database indexer;' && sleep 5 && algorand-indexer daemon \
+      psql -c 'create database indexer;'
+      gp ports await 4001 
+      algorand-indexer daemon \
       --loglevel info \
       --postgres "host=localhost port=5432 user=gitpod dbname=indexer sslmode=disable" \
       --algod-net "localhost:4001" \
